@@ -44,6 +44,7 @@ public:
  
   int poll();
   int downloadFile(const std::string &filename, const std::string &url, uLong expected_crc32);
+  int downloadFile(FILE *fp, const std::string &url, uLong expected_crc32);
   int queueFile(const std::string &path, const std::string &filename, const std::string &url, uLong expected_crc32);
 
   // void yadda(url, filename)
